I have edited index.html file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="intro-section">
-        <h2>Hello World</h2>
+        <h2>Hello World.</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet placeat reprehenderit eaque voluptatem odio quod numquam fugit a, corporis quae quia temporibus voluptate ad earum veritatis commodi qui inventore aperiam.</p>
     </section>
 </body>
