tested stash command on branch2

--- a/stash.html
+++ b/stash.html
@@ -10,5 +10,9 @@
     <h2>Git stash</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor eos vel similique id. Incidunt obcaecati facere earum hic quas. Optio facilis corrupti, itaque nemo nobis esse voluptatibus aliquam veniam distinctio!</p>
     <button>Learn More</button>
+
+    <h2>Git Stash Once Again</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo cum quas earum beatae? Voluptates sed esse corporis, autem eos eligendi libero ipsa. Ut accusamus est cum. Numquam tempore corporis laudantium!</p>
+    <button>Read More</button>
 </body>
 </html>
